
add_library(vgui_controls STATIC
	AnalogBar.cpp
	AnimatingImagePanel.cpp
	AnimationController.cpp
	BitmapImagePanel.cpp
	BuildFactoryHelper.cpp
	BuildGroup.cpp
	BuildModeDialog.cpp
	Button.cpp
	CheckButton.cpp
	CheckButtonList.cpp
	CircularProgressBar.cpp
	ComboBox.cpp
	consoledialog.cpp
	ControllerMap.cpp
	controls.cpp
	DirectorySelectDialog.cpp
	Divider.cpp
	EditablePanel.cpp
	ExpandButton.cpp
	FileOpenDialog.cpp
	FocusNavGroup.cpp
	Frame.cpp
	GraphPanel.cpp
	HTML.cpp
	Image.cpp
	ImageList.cpp
	ImagePanel.cpp
	InputDialog.cpp
	KeyRepeat.cpp
	Label.cpp
	ListPanel.cpp
	ListViewPanel.cpp
	Menu.cpp
	MenuBar.cpp
	MenuButton.cpp
	MenuItem.cpp
	MessageBox.cpp
	MessageDialog.cpp
	Panel.cpp
	PanelListPanel.cpp
	ProgressBar.cpp
	ProgressBox.cpp
	PropertyDialog.cpp
	PropertyPage.cpp
	PropertySheet.cpp
	QueryBox.cpp
	RadioButton.cpp
	RichText.cpp
	RotatingProgressBar.cpp
	savedocumentquery.cpp
	ScrollableEditablePanel.cpp
	ScrollBar.cpp
	ScrollBarSlider.cpp
	SectionedListPanel.cpp
	Slider.cpp
	Splitter.cpp
	subrectimage.cpp
	TextEntry.cpp
	TextImage.cpp
	ToggleButton.cpp
	Tooltip.cpp
	ToolWindow.cpp
	TreeView.cpp
	TreeViewListControl.cpp
	URLLabel.cpp
	vgui_controls.cpp
	WizardPanel.cpp
	WizardSubPanel.cpp
)
target_include_directories(vgui_controls PUBLIC
		../interfaces/
		${HL2SDK_PATH}/public
		${HL2SDK_PATH}/public/tier0
		${HL2SDK_PATH}/public/tier1
		${HL2SDK_PATH}/common
)
target_include_directories(vgui_controls PUBLIC
		../
		../interfaces/
		${HLSDK_PATH}/common
		${HLSDK_PATH}/engine
		${HLSDK_PATH}/pm_shared
)
target_link_libraries(vgui_controls PUBLIC platform_config)
target_link_libraries(vgui_controls PUBLIC dead_wrapper)
target_link_libraries(vgui_controls PUBLIC vstdlib)